--- a/src/main/webapp/WEB-INF/views/users/edit.html
+++ b/src/main/webapp/WEB-INF/views/users/edit.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
 
-<!-- Ниже строчка, которая указывает, что мы используем таймлиф -->
+
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Редактирование пользователя</title>
+  <title>Update user data</title>
 </head>
 <body>
 
-<!-- Метод PATCH, потому что это изменение -->
 
 <form th:method="PATCH" th:action="@{/users/{id} (id = ${user.getId()})}" th:object="${user}">
 
-  <label for="name"> Измените имя: </label>  <!-- Эта метка для input, id которого "name"-->
+  <label for="name"> Change name: </label>
   <input type="text" th:field="*{name}" id="name" />
-  <br/> <!--Это пустая строка-->
+  <br/>
 
-  <label for="surname"> Измените фамилию: </label>  <!-- Эта метка для input, id которого "name"-->
+  <label for="surname"> Change surname: </label>
   <input type="text" th:field="*{surname}" id="surname" />
-  <br/> <!--Это пустая строка-->
+  <br/>
 
-  <label for="age"> Измените возраст: </label>  <!-- Эта метка для input, id которого "name"-->
+  <label for="age"> Change age: </label>
   <input type="number" th:field="*{age}" id="age"/>
-  <br/> <!--Это пустая строка-->
+  <br/>
 
-  <input type="submit" value="Внести изменения в данные пользователя"/> <!--Это кнопка, нажав которую мы
-     данные с этой формы отправим post-запросом на адрес /all. А в контроллере в методе newUser
-     будут назначены значения полям объекту User user-->
+  <input type="submit" value="Confirm changes"/>
 
 </form>
 </body>
